<?xml version="1.0" encoding="utf-8"?>
<eightbitlab.com.blurview.BlurTarget xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBlurTarget"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/recording_settings_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.goodwy.commons.views.MyAppBarLayout
            android:id="@+id/recording_settings_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/recording_settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/call_recording"
                app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
        </com.goodwy.commons.views.MyAppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/recording_settings_nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingHorizontal="@dimen/activity_padding_left_right"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/recording_settings_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_margin">

                <!-- Enable Recording -->
                <TextView
                    android:id="@+id/settings_general_label"
                    style="@style/SettingsSectionLabelStyle"
                    android:text="@string/general"
                    tools:textColor="@color/color_primary" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/settings_recording_card"
                    style="@style/SettingsSectionHolder"
                    app:cardCornerRadius="@dimen/activity_margin"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/settings_recording_enabled_holder"
                            style="@style/SettingsHolderStyle">

                            <com.goodwy.commons.views.MyLiquidSwitch
                                android:id="@+id/settingsShowVoicemailIcon"
                                style="@style/SettingsSwitchStyle"
                                android:text="@string/enable_call_recording"
                                app:switchPadding="@dimen/bigger_margin" />
                        </RelativeLayout>

                        <!-- Auto-recording Rule -->
                        <RelativeLayout
                            android:id="@+id/settings_recording_auto_rule_holder"
                            style="@style/SettingsHolderStyle">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_auto_rule_label"
                                style="@style/SettingsTextLabelStyle"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="68dp"
                                android:text="@string/auto_recording_rule" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_auto_rule"
                                style="@style/SettingsTextValueStyle"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/settings_margin"
                                tools:text="All calls" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Format and Location -->
                <TextView
                    android:id="@+id/settings_format_location_label"
                    style="@style/SettingsSectionLabelStyle"
                    android:text="@string/format_and_location"
                    tools:textColor="@color/color_primary" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/settings_format_location_card"
                    style="@style/SettingsSectionHolder"
                    app:cardCornerRadius="@dimen/activity_margin"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Audio Format -->
                        <RelativeLayout
                            android:id="@+id/settings_recording_format_holder"
                            style="@style/SettingsHolderStyle">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_format_label"
                                style="@style/SettingsTextLabelStyle"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="68dp"
                                android:text="@string/recording_format" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_format"
                                style="@style/SettingsTextValueStyle"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/settings_margin"
                                tools:text="WAV" />
                        </RelativeLayout>

                        <!-- Save Location -->
                        <RelativeLayout
                            android:id="@+id/settings_recording_save_location_holder"
                            style="@style/SettingsHolderStyle">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_save_location_label"
                                style="@style/SettingsTextLabelStyle"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="68dp"
                                android:text="@string/save_location" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_save_location"
                                style="@style/SettingsTextValueStyle"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/settings_margin"
                                tools:text="App Storage" />
                        </RelativeLayout>

                        <!-- Custom Path (visible only if Custom location selected) -->
                        <RelativeLayout
                            android:id="@+id/settings_recording_custom_path_holder"
                            style="@style/SettingsHolderStyle"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_custom_path_label"
                                style="@style/SettingsTextLabelStyle"
                                android:layout_centerVertical="true"
                                android:text="@string/custom_path" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_custom_path"
                                style="@style/SettingsTextValueStyle"
                                android:layout_below="@id/settings_recording_custom_path_label"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="@dimen/tiny_margin"
                                android:layout_marginEnd="@dimen/settings_margin"
                                android:alpha="0.7"
                                android:textSize="@dimen/smaller_text_size"
                                tools:text="/storage/emulated/0/MyRecordings" />
                        </RelativeLayout>

                        <!-- Current Path (info only) -->
                        <LinearLayout
                            android:id="@+id/settings_recording_current_path_holder"
                            style="@style/SettingsHolderStyle"
                            android:clickable="false"
                            android:focusable="false"
                            android:orientation="vertical">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_current_path_label"
                                style="@style/SettingsTextLabelStyle"
                                android:text="@string/current_save_path" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_current_path"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/tiny_margin"
                                android:alpha="0.7"
                                android:textSize="@dimen/smaller_text_size"
                                tools:text="/storage/emulated/0/Android/data/com.android.dialer/files/Recordings" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- File Naming -->
                <TextView
                    android:id="@+id/settings_file_naming_label"
                    style="@style/SettingsSectionLabelStyle"
                    android:text="@string/file_naming"
                    tools:textColor="@color/color_primary" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/settings_file_naming_card"
                    style="@style/SettingsSectionHolder"
                    app:cardCornerRadius="@dimen/activity_margin"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- File Name Template -->
                        <LinearLayout
                            android:id="@+id/settings_recording_file_template_holder"
                            style="@style/SettingsHolderStyle"
                            android:orientation="vertical">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_file_template_label"
                                style="@style/SettingsTextLabelStyle"
                                android:text="@string/file_name_template" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_file_template"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/tiny_margin"
                                android:alpha="0.7"
                                android:textSize="@dimen/smaller_text_size"
                                tools:text="{timestamp}_{direction}_{phone_number}" />
                        </LinearLayout>

                        <!-- Preview -->
                        <LinearLayout
                            android:id="@+id/settings_recording_preview_holder"
                            style="@style/SettingsHolderStyle"
                            android:orientation="vertical">

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_preview_label"
                                style="@style/SettingsTextLabelStyle"
                                android:text="@string/preview_example" />

                            <com.goodwy.commons.views.MyTextView
                                android:id="@+id/settings_recording_preview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/tiny_margin"
                                android:alpha="0.7"
                                android:textSize="@dimen/smaller_text_size"
                                tools:text="20231221_143025.123+0000_out_1234567890.wav" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Actions -->
                <TextView
                    android:id="@+id/settings_actions_label"
                    style="@style/SettingsSectionLabelStyle"
                    android:text="@string/actions"
                    tools:textColor="@color/color_primary" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/settings_actions_card"
                    style="@style/SettingsSectionHolder"
                    app:cardCornerRadius="@dimen/activity_margin"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:id="@+id/settings_recording_open_folder_holder"
                        style="@style/SettingsHolderStyle">

                        <com.goodwy.commons.views.MyTextView
                            android:id="@+id/settings_recording_open_folder_label"
                            style="@style/SettingsTextLabelStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/open_recordings_folder" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</eightbitlab.com.blurview.BlurTarget>
